Fixes blog border-radius issue on mobile.

--- a/static/less/blog.less
+++ b/static/less/blog.less
@@ -23,7 +23,7 @@ ol {
     color: @color_dark_gray;
     font-size: @font_size_regular;
     margin: @space_smaller 0 (@space_small + 2px) 0;
-    
+
     a {
         font-weight: @font_weight_regular;
         color: @color_dark_gray;
@@ -112,6 +112,7 @@ img {
 
     .blog_img.half_width {
         width: 100%;
+        border-radius: @border_radius;
     }
 
     .image_group {
